[tool.poetry]
name = "data-enrichment-with-google-sheets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^25.8.0"
pygsheets = "^2.0.6"
replit = "^4.0.0"
groq = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
